# fundrbolt-platform

./: .gitignore  .npmignore  .pre-commit-config.yaml  .prettierignore  API_MIGRATION_GUIDE.md  CHANGELOG_REBRAND.md  FEATURE_COMPLETION_SUMMARY.md  Makefile  PR_SEATING_ASSIGNMENT.md  README.md  REBRAND_COMPLETION_SUMMARY.md  REGISTRATION_IMPORT_QUICKSTART.md  TESTING_GUIDE.md  TESTING_SUMMARY.md  check-servers.sh  debug-npo-api.sh  docker-compose.test.yml  docker-compose.yml  fundrbolt_db_backup.sql  ngrok.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pr-body.md  ql  -t -A -F| -c SELECT u.email, u.first_name, r.name, u.is_active, u.email_verified FROM users u JOIN roles r ON u.role_id = r.id ORDER BY u.created_at;  test-email-verification.sh
backend/: .dockerignore  .env.example  .safety-policy.yml  Dockerfile  README.md  backfill_cause_section_slide_variants.py  backfill_thumbnails.py  check_event_images.py  check_event_status.py  conftest.py  diagnose_tests.py  fix_step_up_for_user.py  h origin main  publish_auction_items.py  publish_draft_events.py  pyproject.toml  pytest.ini  reset_rate_limit.py  seed_auction_items_simple.py  seed_checklist_template.py  seed_donation_labels.py  seed_event_guests.py  seed_food_options.py  seed_legal_documents.py  seed_npo_demo_data.py  seed_seating_data.py  seed_testimonials.py  set_blob_public_access.py  test_bidder_endpoint.py  test_email_logo.py  test_login_endpoint.py  test_single_fixture.py  ycopg2
backend/.azure/: app-settings.json  startup.sh
backend/alembic/versions/: 001_create_roles_table.py  004_seed_superadmin.py  006_add_performance_indexes.py  008_add_npo_management_tables.py  008_add_user_organization_fields.py  009_add_deleted_at_to_npo.py  009_restructure_user_address_fields.py  010_add_tagline_to_npo.py  011_add_branding_colors.py  012_add_event_registration_tables.py  013_add_seating_configuration.py  014_add_seating_and_bidder_fields.py  015_bidder_number_uniqueness_trigger.py  01d76fb1bf69_add_sponsors_table.py  028_add_donations_and_labels.py  029_add_quick_entry_tables.py  030_globalize_donation_labels_defaults.py  030_social_auth_entities.py  031_add_quick_entry_buy_now_table.py  032_add_auction_close_datetime.py  033_add_auction_start_datetime.py  034_add_event_end_datetime.py  034a001_add_onboarding_sessions_table.py  034a002_add_npo_application_reopened_status.py  035_add_communications_email_to_users.py  035a001_add_notification_tables.py  036_add_communications_email_verified.py  036_add_ticket_purchasing.py  036_backup_password_support.py  037_add_event_custom_options.py  037a001_add_checklist_tables.py  038_add_event_hashtag.py  039_add_donor_labels.py  039_add_is_monthly_to_paddle_raise.py  041_add_npo_hashtag.py  042_add_auctioneer_role_and_tables.py  042_add_revenue_generator_tables.py  043a_add_npo_slug.py  043b_add_donate_now_tables.py  044_add_event_id_to_npo_donations.py  (+91 more)
backend/app/: __init__.py  celery_app.py  main.py
backend/app/core/: auction_item_import.py  celery_app.py  config.py  database.py  encryption.py  errors.py  logging.py  metrics.py  payment_deps.py  security.py
backend/app/middleware/: auth.py  consent_check.py  powered_by.py  rate_limit.py  slug_validator.py
backend/app/models/: __init__.py  auction_bid.py  auction_bid_import.py  auction_item.py  auctioneer.py  branding_theme_template.py  buy_now_availability.py  cause_section_card.py  checkin_record.py  checklist.py  checkout_configuration.py  checkout_session.py  contact_submission.py  donate_now_config.py  donate_now_media.py  donation.py  donation_label.py  donation_label_assignment.py  donation_tier.py  donor_label.py  donor_label_assignment.py  event.py  event_nudge_dismissal.py  event_nudge_notification_log.py  event_registration.py  event_survey_config.py  event_table.py  npo.py  (+48 more)
backend/scripts/: generate_auction_item_import_pack.py  image_generator_cli.py  verify_ticket_schema.py
(+2281 files in other folders)
